--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -24,7 +24,7 @@
           <input id="email" 
           placeholder="Enter your e-mail!" 
           formControlName="email" type="email" autofocus>
-          <div class="input-icon"></div>
+          <div class="input-icon"><i class="icon"></i></div>
         </div>
       </div>
 
