--- a/client/src/app/coins-view/top-hundred/top-hundred.component.html
+++ b/client/src/app/coins-view/top-hundred/top-hundred.component.html
@@ -2,27 +2,9 @@
   <div class="global-data">
     <app-global-data></app-global-data>
   </div>
-  <div class="table">
+  <div class="table-component-container">
     <h1>Top 100 coins</h1>
-    <thead>
-      <tr>
-        <td id="first">#</td>
-        <td id="second"></td>
-        <td id="third">Coin</td>
-        <td id="fourth">Sym</td>
-        <td id="fifth">Price</td>
-        <td id="sixth">1h</td>
-        <td id="seventh">24h</td>
-        <td id="eighth">7d</td>
-        <td id="ninth">Mkt Cap</td>
-        <td id="tenth">Total</td>
-      </tr>
-    </thead>
-    <tbody>
-      <app-coin-top-row 
-      *ngFor="let coin of (topHundred$ | async); index as i" 
-      [coin]="coin" [index]="i + 1"></app-coin-top-row>
-    </tbody>
+    <app-coin-data-table [coinsData$]="topHundred$"></app-coin-data-table>
   </div>
 </div>
 <div class="spinner-container" *ngIf="(isLoading$ | async)">
