--- a/client/src/app/home/crypto-card/crypto-card.component.html
+++ b/client/src/app/home/crypto-card/crypto-card.component.html
@@ -1,9 +1,9 @@
-<article class="card-box">
+<article class="card">
   <header class="logo-container">
-    <h3 class="crypto-title">{{ card.name }}</h3>
+    <h3 class="coin-name">{{ card.name }}</h3>
     <img src="{{ card.image }}" alt="coin-logo">
   </header>
-  <main class="text-center">
+  <main class="coin-info">
     <p><span class="label">Price:</span>
       {{ card.current_price | currency:'USD':'symbol':'1.2-10' }}</p>
     <p><span class="label">24h:</span>
