--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,8 +1,23 @@
 *,
 html {
-    margin: 0;
-    padding: 0;
     font-family: 'Roboto', sans-serif;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+* {
+    margin: 0;
+}
+
+input,
+button,
+textarea,
+select {
+    font: inherit;
 }
 
 body {
