--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -9,7 +9,7 @@
 			</div>
 			<div class="right-container">
 				<li><a routerLink="/coins/top100">Top 100</a></li>
-				<!-- <li><a routerLink="/coins/new-coins">New Coins</a></li> -->
+				<li><a routerLink="/coins/new-coins">New Coins</a></li>
 				<li><a routerLink="/converter">Crypto Converter</a></li>
 				<div *ngIf="!(user | async)" class="guestContainer">
 					<li><a routerLink="/auth/login">Login</a></li>
