--- a/client/src/app/auth/register/register.component.css
+++ b/client/src/app/auth/register/register.component.css
@@ -33,7 +33,6 @@ form {
 }
 
 .input-container {
-  display: block;
   border-bottom: black 1px solid;
   margin-top: 25px;
   transition: border-bottom, ease, 600ms;
@@ -62,20 +61,18 @@ label {
   display: flex;
   justify-content: space-evenly;
   height: 30px;
-  margin-top: 8px;
+  margin-top: 18px;
 }
 
 .input-icon {
-  width: 20px;
+  width: 30px;
   opacity: 40%;
   color: white;
 }
 
 input {
   color: white;
-  background: rgba(102, 102, 102, 0.4);
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
+  background: #444444;
   border-radius: 10px;
   text-align: center;
   border: none;
