--- a/client/src/app/portfolio-view/add-coin-modal/add-coin-modal.component.css
+++ b/client/src/app/portfolio-view/add-coin-modal/add-coin-modal.component.css
@@ -47,9 +47,7 @@ label {
 
 .input {
   color: white;
-  background: rgba(102, 102, 102, 0.4);
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
+  background: #444444;
   border-radius: 10px;
   text-align: center;
   border: none;
@@ -107,6 +105,10 @@ input::-webkit-inner-spin-button {
   margin-right: 50px;
 }
 
+button:disabled {
+  cursor: not-allowed
+}
+
 .menu {
   display: inline-block;
   position: relative;
@@ -152,10 +154,6 @@ input::-webkit-inner-spin-button {
   font-size: 16px;
   padding-top: -8px;
   padding-bottom: 6px;
-}
-
-button:disabled {
-  cursor: not-allowed
 }
 
 ::-webkit-scrollbar {
