--- a/client/src/app/portfolio-view/portfolio/portfolio.component.html
+++ b/client/src/app/portfolio-view/portfolio/portfolio.component.html
@@ -27,16 +27,14 @@
         </tr>
       </thead>
       <tbody>
-        <app-portfolio-table-row
-        class="transaction"
+        <app-portfolio-table-row class="transaction" 
         *ngFor="let transactionId of (transactionsIds$ | async)"
-        [transactionId]="transactionId"
-        ></app-portfolio-table-row>
+        (click)="editTransaction(transactionId)"
+          [transactionId]="transactionId"></app-portfolio-table-row>
       </tbody>
     </div>
   </div>
   <div class="modal" *ngIf="(addModalStatus$ | async)" (click)="hideModal($event)">
-  
     <app-add-coin-modal></app-add-coin-modal>
   </div>
   <div class="modal" *ngIf="(editModalStatus$ | async)" (click)="hideModal($event)">
