--- a/client/src/app/portfolio-view/add-coin-modal/add-coin-modal.component.html
+++ b/client/src/app/portfolio-view/add-coin-modal/add-coin-modal.component.html
@@ -7,17 +7,25 @@
       <label for="coinId">Coin</label>
       <span class="error" 
       *ngIf="!addCoinForm.get('coinId')?.valid && 
-      addCoinForm.get('coinId')?.touched">Please select a coin!</span>
+      addCoinForm.get('coinId')?.touched"
+      >Please select a coin!</span>
 
       <div class="menu">
         <div class="input-dropdown">
-          <input #input (input)="filter(input.value)" 
-          autocomplete="off" class="input" id="coinId" placeholder="Bitcoin"
-            formControlName="coinId" type="text" 
-            [value]="selectedCoinName ? selectedCoinName : ''" autofocus>
+          <input class="input" id="coinId"
+          #input 
+          formControlName="coinId"
+          (input)="filter(input.value)" 
+          autocomplete="off" 
+          placeholder="Bitcoin"
+          type="text" 
+          [value]="selectedCoinName ? selectedCoinName : ''" 
+          autofocus>
           <div class="menu-content" [class.on]="(allCoins$ | async)">
-            <button type="button" *ngFor="let coin of (allCoins$ | async)" 
-            (click)="setCoin(coin)">{{coin.name}} - {{coin.symbol | uppercase}}</button>
+            <button type="button" 
+            *ngFor="let coin of (allCoins$ | async)" 
+            (click)="setCoin(coin)"
+            >{{coin.name}} - {{coin.symbol | uppercase}}</button>
           </div>
         </div>
       </div>
@@ -27,25 +35,35 @@
       <label for="coinPrice">Price per coin</label>
       <span class="error" 
       *ngIf="!addCoinForm.get('coinPrice')?.valid && 
-      addCoinForm.get('coinPrice')?.touched">Please enter a price!</span>
+      addCoinForm.get('coinPrice')?.touched"
+      >Please enter a price!</span>
 
-      <input class="input" #coinPrice id="coinPrice" placeholder="Enter bought price" 
-      formControlName="coinPrice" type="number">
+      <input class="input" id="coinPrice"
+      #coinPrice  
+      formControlName="coinPrice" 
+      placeholder="Enter bought price" 
+      type="number">
     </div>
 
     <div class="input-container">
       <label for="quantity">Quantity</label>
-      <span class="error" *ngIf="!addCoinForm.get('quantity')?.valid && 
-      addCoinForm.get('quantity')?.touched">Please enter quantity!</span>
+      <span class="error" 
+      *ngIf="!addCoinForm.get('quantity')?.valid && 
+      addCoinForm.get('quantity')?.touched"
+      >Please enter quantity!</span>
 
-      <input class="input" #quantity id="quantity" 
-      placeholder="Hou much do you own" formControlName="quantity" type="number">
+      <input class="input" id="quantity" 
+      #quantity
+      formControlName="quantity" 
+      placeholder="Hou much do you own" 
+      type="number">
     </div>
 
     <div class="input-container">
       <label for="quantity">Total Spent</label>
 
-      <p class="input">{{+coinPrice.value * +quantity.value | number:'1.0-2'}}</p>
+      <p class="input"
+      >{{+coinPrice.value * +quantity.value | number:'1.0-2'}}</p>
     </div>
 
     <div class="button-div">
