--- a/client/src/app/portfolio-view/portfolio/portfolio.component.html
+++ b/client/src/app/portfolio-view/portfolio/portfolio.component.html
@@ -17,7 +17,8 @@
         <tr>
           <td class="first-header">Asset</td>
           <td class="second-header">Balance</td>
-          <td class="third-header">Price (USD)</td>
+          <td class="third-header">Bought Price (USD)</td>
+          <td class="third-header">Current Price (USD)</td>
           <td class="fourth-header">24h Change (%)</td>
           <td class="fifth-header">PNL</td>
           <td class="sixth-header"></td>
