--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,8 @@
 <app-header></app-header>
+<div class="error-banner" *ngIf="error$ | async" (click)="clearError()">
+  <app-error-banner [errorMessage]="(error$ | async)"></app-error-banner>
+</div>
 <router-outlet></router-outlet>
+<div class="spinner-container" *ngIf="(isLoading$ | async)">
+  <app-loading-spinner class="spinner"></app-loading-spinner>
+</div>
