--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -1,9 +1,5 @@
 <div class="container">
   <section class="register-container">
-    <app-error-banner 
-    *ngIf="(error$ | async)" 
-    [errorMessage]="(error$ | async)"
-    ></app-error-banner>
 
     <header>
       <img class="logo" src="/assets/logo-white.png" alt="logo img">
@@ -14,10 +10,10 @@
 
       <div class="input-container">
         <label for="email">Email</label>
-        <span class="error" 
+        <p class="error" 
         *ngIf="!registerForm.get('email')?.valid && 
         registerForm.get('email')?.touched"
-        >Invalid e-mail!</span>
+        >Invalid e-mail!</p>
 
         <div class="field">
           <i class="input-icon fa-solid fa-at"></i>
@@ -29,10 +25,10 @@
 
       <div class="input-container">
         <label for="email">Username</label>
-        <span class="error"
+        <p class="error"
           *ngIf="!registerForm.get('username')?.valid && 
           registerForm.get('username')?.touched"
-          >Invalid username!</span>
+          >Invalid username!</p>
 
         <div class="field">
           <i class="input-icon fa-solid fa-at"></i>
@@ -44,10 +40,10 @@
 
       <div class="input-container">
         <label for="password">Password</label>
-        <span class="error"
+        <p class="error"
           *ngIf="!registerForm.get('password')?.valid && 
           registerForm.get('password')?.touched"
-          >Invalid password!</span>
+          >Invalid password!</p>
 
         <div class="field">
           <i class="input-icon fa-solid fa-key"></i>
@@ -59,14 +55,14 @@
 
       <div class="input-container">
         <label for="repeatPass">Repeat Password</label>
-        <span class="error" 
+        <p class="error" 
         *ngIf="registerForm.get('rePass')?.errors?.['passwordDontMatch'] &&
         registerForm.get('rePass')?.touched"
-        >Passwords must match!</span>
-        <span class="error" 
+        >Passwords must match!</p>
+        <p class="error" 
         *ngIf="!registerForm.get('rePass')?.valid && 
         registerForm.get('rePass')?.touched"
-        >Invalid password!</span>
+        >Invalid password!</p>
 
         <div class="field">
           <i class="input-icon fa-solid fa-key"></i>
@@ -88,8 +84,4 @@
     </footer>
 
   </section>
-</div>
-
-<div class="spinner-container" *ngIf="(isLoading$ | async)">
-  <app-loading-spinner class="spinner"></app-loading-spinner>
 </div>
