--- a/client/src/app/coins-view/coin-details/coin-details.component.css
+++ b/client/src/app/coins-view/coin-details/coin-details.component.css
@@ -1,7 +1,6 @@
 .container {
-  display: block;
   overflow-x: auto;
-  margin-top: 160px;
+  margin: 160px 0;
   color: white;
 }
 
@@ -138,26 +137,4 @@ p.timestamp {
   justify-content: center;
   align-items: center;
   margin-top: 24px;
-}
-
-.spinner-container {
-  display: flex;
-  justify-content: center;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
-.spinner {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
 }
