--- a/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
+++ b/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
@@ -3,9 +3,8 @@
 }
 
 .converter {
-  display: block;
   margin: 0 auto;
-  min-width: 500px;
+  min-width: 350px;
   max-width: 800px;
 }
 
@@ -34,9 +33,13 @@ form {
 
 .currency-selector-container {
   display: flex;
-  height: 30px;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   margin: 18px 0;
+}
+
+.currency-selector-container>.input-container {
+  margin-top: 16px;
 }
 
 .input-container {
@@ -157,26 +160,4 @@ input:-webkit-autofill:focus {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
-}
-
-.spinner-container {
-  display: flex;
-  justify-content: center;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
-.spinner {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
 }
