--- a/client/src/app/shared/error-banner/error-banner.component.css
+++ b/client/src/app/shared/error-banner/error-banner.component.css
@@ -1,10 +1,32 @@
 .container {
+  display: flex;
+  justify-content: space-between;
   color: white;
   background: rgba(220, 20, 60, 0.4);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   text-align: center;
   padding: 15px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.error-message {
+  padding-top: 4px;
+  font-size: 18px;
+}
+
+.icon {
+  font-size: 18px;
+  padding: 3px;
+}
+
+.cross {
+  cursor: pointer;
+}
+
+.cross:hover {
+  background-color: #444444;
+  border-radius: 6px;
+  padding: 3px;
 }
