--- a/client/src/app/shared/error-banner/error-banner.component.html
+++ b/client/src/app/shared/error-banner/error-banner.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-  <p>{{ errorMessage }}</p>
+  <div class="icon"></div>
+  <p class="error-message">{{ errorMessage }}</p>
+  <p class="icon cross">🞬</p>
 </div>
