--- a/client/src/app/portfolio-view/portfolio/portfolio.component.css
+++ b/client/src/app/portfolio-view/portfolio/portfolio.component.css
@@ -9,6 +9,7 @@
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
   border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   padding: 25px;
   margin: 0 auto;
 }
@@ -27,6 +28,7 @@ thead {
   border-bottom: 1px solid #797979;
   display: flex;
   flex-direction: column;
+  padding: 0 15px;
 }
 
 tbody {
@@ -83,7 +85,7 @@ tr {
 }
 
 .sixth-header {
-  width: 20px;
+  width: 28px;
   text-align: left;
 }
 
@@ -114,6 +116,7 @@ tr {
 .modal {
   display: flex;
   justify-content: center;
+  align-items: center;
   position: fixed;
   z-index: 1;
   left: 0;
