--- a/client/src/app/auth/login/login.component.css
+++ b/client/src/app/auth/login/login.component.css
@@ -1,16 +1,9 @@
 .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
+  margin: 180px 0;
 }
 
 .login-container {
+  margin: 0 auto;
   width: 460px;
   color: white;
   background: rgba(102, 102, 102, 0.4);
@@ -126,7 +119,7 @@ button:disabled {
 
 footer {
   text-align: center;
-  margin: 25px;
+  padding: 25px;
 }
 
 a {
