--- a/client/src/app/auth/profile/delete-user-modal/delete-user-modal.component.css
+++ b/client/src/app/auth/profile/delete-user-modal/delete-user-modal.component.css
@@ -1,30 +1,16 @@
-.container {
-  margin: 140px 0;
-}
-
-.register-container {
-  margin: 0 auto;
-  width: 460px;
+.modal {
   color: white;
   background: rgba(102, 102, 102, 0.4);
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  width: 500px;
+  padding: 24px;
 }
 
 header {
   text-align: center;
-}
-
-.logo {
-  width: 180px;
-  padding: 50px 0px;
-  margin: 0 auto;
-}
-
-h1 {
-  font-weight: 300;
 }
 
 form {
@@ -70,7 +56,8 @@ label {
   color: white;
 }
 
-input {
+.input {
+  display: block;
   color: white;
   background: #444444;
   border-radius: 10px;
@@ -78,6 +65,7 @@ input {
   border: none;
   width: 280px;
   height: 20px;
+  margin: 0 auto;
 }
 
 input:focus {
@@ -95,36 +83,36 @@ input:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0px 40rem #545454 inset;
 }
 
-.button-container {
-  text-align: center;
-  margin-top: 25px;
+.buttons-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 24px;
 }
 
-button {
+.button {
   background-color: #00DBDE;
-  background-image: linear-gradient(90deg, #00DBDE 30%, #FC00FF 80%);
+  background-image: linear-gradient(90deg, #f71d1d 0%, #330000 100%);
   border: none;
   border-radius: 10px;
-  padding: 10px 30%;
+  padding: 10px 30px;
   font-size: large;
   color: white;
   cursor: pointer;
+}
+
+.button-cancel {
+  background: grey;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 30px;
+  font-size: large;
+  color: white;
+  cursor: pointer;
+  margin-right: 50px;
 }
 
 button:disabled {
   background-color: #00DBDE;
   background-image: linear-gradient(90deg, #000000 30%, #5a5a5a 80%);
   cursor: not-allowed;
-}
-
-footer {
-  text-align: center;
-  padding: 25px;
-}
-
-a {
-  color: crimson;
-  padding-left: 3px;
-  font-weight: bold;
-  text-decoration: none;
 }
