--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -18,6 +18,7 @@
 				<div *ngIf="(user | async)" class="userContainer">
 					<li><a routerLink="/portfolio">Portfolio</a></li>
 					<li><a (click)="onLogout()">Logout</a></li>
+					<li><a routerLink="/auth/profile"><i class="fa-solid fa-user"></i></a></li>
 				</div>
 			</div>
 		</ul>
