--- a/client/src/app/auth/profile/change-password-modal/change-password-modal.component.html
+++ b/client/src/app/auth/profile/change-password-modal/change-password-modal.component.html
@@ -20,7 +20,7 @@
       </div>
     </div>
 
-    <div class="input-container">
+    <div class="input-container" appToolTip className="open">
       <label for="newPassword">New password</label>
       <p class="error"
       *ngIf="!changePasswordForm.get('newPassword')?.valid &&
@@ -33,6 +33,25 @@
         formControlName="newPassword"
         type="password">
         <i class="input-icon fa-solid fa-eye"></i>
+      </div>
+      <div class="tooltip">
+        <div class="tooltip-text">
+          <h4>Password must contain</h4>
+          <ul>
+            <li>
+              <p>one uppercase letter</p>
+            </li>
+            <li>
+              <p>one lowercase letter</p>
+            </li>
+            <li>
+              <p>one number and also</p>
+            </li>
+            <li>
+              <p>must be at least 8 characters long!</p>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 
