--- a/client/src/app/portfolio-view/portfolio/portfolio-table-row/portfolio-table-row.component.css
+++ b/client/src/app/portfolio-view/portfolio/portfolio-table-row/portfolio-table-row.component.css
@@ -64,7 +64,7 @@ tr {
   border-radius: 16px;
 }
 .delete-button:hover {
-  background-color: #181818;
+  background-color: #2f2f30;
   padding: 4px;
   border-radius: 16px;
 }
