--- a/client/src/app/shared/error-banner/error-banner.component.html
+++ b/client/src/app/shared/error-banner/error-banner.component.html
@@ -1,5 +1,4 @@
 <div class="container">
-  <div class="icon"></div>
   <p class="error-message">{{ errorMessage }}</p>
-  <p class="icon cross">🞬</p>
+  <p class="icon">🞬</p>
 </div>
