--- a/client/src/app/auth/profile/change-password-modal/change-password-modal.component.css
+++ b/client/src/app/auth/profile/change-password-modal/change-password-modal.component.css
@@ -1,10 +1,8 @@
 .modal {
   color: white;
-  background: rgba(102, 102, 102, 0.4);
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
+  background-color: #1A1C1D;
+  box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   width: 500px;
   padding: 24px;
   padding-bottom: 0;
@@ -27,7 +25,7 @@ header {
 }
 
 .input-container:has(.field > input.ng-invalid.ng-touched) {
-  border-bottom: red 1px solid;
+  border-bottom: crimson 1px solid;
 }
 
 label {
@@ -60,7 +58,7 @@ label {
 input {
   display: block;
   color: white;
-  background: #444444;
+  background-color: #313131;
   border-radius: 10px;
   text-align: center;
   border: none;
@@ -81,7 +79,34 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
   -webkit-text-fill-color: white;
-  -webkit-box-shadow: 0 0 0px 40rem #545454 inset;
+  -webkit-box-shadow: 0 0 0px 40rem #313131 inset;
+}
+
+.open .tooltip {
+  visibility: visible;
+  animation-duration: 300ms;
+  animation-name: fadeIn;
+}
+
+.tooltip {
+  position: absolute;
+  visibility: hidden;
+  top: 426px;
+  right: 117px;
+  width: 260px;
+  padding: 8px;
+  padding-left: 28px;
+  color: white;
+  background-color: rgba(220, 20, 60, 0.4);
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+@keyframes fadeIn {
+  from {
+    background-color: rgba(220, 20, 60, 0);
+    color: #00000000;
+  }
 }
 
 .buttons-container {
@@ -91,8 +116,8 @@ input:-webkit-autofill:focus {
 }
 
 .button {
-  background-color: #00DBDE;
-  background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+  background: rgb(238, 174, 202);
+  background: linear-gradient(180deg, #450B25 0%, #0E2C53 100%);
   border: none;
   border-radius: 10px;
   padding: 10px 30px;
@@ -102,7 +127,7 @@ input:-webkit-autofill:focus {
 }
 
 .button-cancel {
-  background: grey;
+  background-color: #525252;
   border: none;
   border-radius: 10px;
   padding: 10px 30px;
@@ -114,6 +139,6 @@ input:-webkit-autofill:focus {
 
 button:disabled {
   background-color: #00DBDE;
-  background-image: linear-gradient(90deg, #000000 30%, #5a5a5a 80%);
+  background-image: linear-gradient(180deg, #000000 0%, #1a1a1a 100%);
   cursor: not-allowed;
 }
