--- a/client/src/app/auth/profile/delete-user-modal/delete-user-modal.component.css
+++ b/client/src/app/auth/profile/delete-user-modal/delete-user-modal.component.css
@@ -1,10 +1,8 @@
 .modal {
   color: white;
-  background: rgba(102, 102, 102, 0.4);
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
+  background-color: #1A1C1D;
+  box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   width: 500px;
   padding: 24px;
 }
@@ -26,7 +24,7 @@ form {
 }
 
 .input-container:has(.field > input.ng-invalid.ng-touched) {
-  border-bottom: red 1px solid;
+  border-bottom: crimson 1px solid;
 }
 
 label {
@@ -59,7 +57,7 @@ label {
 .input {
   display: block;
   color: white;
-  background: #444444;
+  background-color: #313131;
   border-radius: 10px;
   text-align: center;
   border: none;
@@ -80,7 +78,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
   -webkit-text-fill-color: white;
-  -webkit-box-shadow: 0 0 0px 40rem #545454 inset;
+  -webkit-box-shadow: 0 0 0px 40rem #313131 inset;
 }
 
 .buttons-container {
@@ -90,8 +88,8 @@ input:-webkit-autofill:focus {
 }
 
 .button {
-  background-color: #00DBDE;
-  background-image: linear-gradient(90deg, #f71d1d 0%, #330000 100%);
+  background: rgb(238, 174, 202);
+  background: linear-gradient(180deg, #450B25 0%, #0E2C53 100%);
   border: none;
   border-radius: 10px;
   padding: 10px 30px;
@@ -101,7 +99,7 @@ input:-webkit-autofill:focus {
 }
 
 .button-cancel {
-  background: grey;
+  background-color: #525252;
   border: none;
   border-radius: 10px;
   padding: 10px 30px;
@@ -113,6 +111,6 @@ input:-webkit-autofill:focus {
 
 button:disabled {
   background-color: #00DBDE;
-  background-image: linear-gradient(90deg, #000000 30%, #5a5a5a 80%);
+  background-image: linear-gradient(180deg, #000000 0%, #1a1a1a 100%);
   cursor: not-allowed;
 }
