--- a/client/src/app/auth/profile/profile.component.css
+++ b/client/src/app/auth/profile/profile.component.css
@@ -10,11 +10,9 @@
   width: 460px;
   height: 600px;
   color: white;
-  background: rgba(102, 102, 102, 0.4);
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
+  background-color: #1A1C1D;
+  box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .user-info {
@@ -33,7 +31,7 @@
   min-height: 69px;
   max-height: 69px;
   height: 69px;
-  border-radius: 50px;
+  border-radius: 100%;
   overflow: hidden;
   margin: 0 auto;
 }
@@ -49,7 +47,7 @@
   flex-direction: column;
   justify-content: center;
   border-radius: 10px;
-  background-color: #444444;
+  background-color: #1f1f1f;
   margin: 24px;
   padding: 18px;
 }
@@ -78,7 +76,7 @@ li.user-settings__option:last-child {
 
 .user-settings__option a:hover {
   padding: 8px 16px;
-  background-color: #757575;
+  background-color: #2f2f30;
   border-radius: 6px;
   transition: background-color ease 600ms;
 }
@@ -105,6 +103,5 @@ li.user-settings__option:last-child {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.6);
 }
