--- a/client/src/app/coins-view/coin-details/coin-details.component.css
+++ b/client/src/app/coins-view/coin-details/coin-details.component.css
@@ -1,18 +1,15 @@
 .container {
   overflow-x: auto;
-  margin: 160px 0;
   color: white;
 }
 
 .details-page {
-  margin: 0 auto;
+  margin: 160px auto;
   padding: 18px;
   width: 1400px;
-  background: rgba(102, 102, 102, 0.4);
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
+  background-color: #1A1C1D;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  box-shadow: 6px 4px 31px 19px rgba(0,0,0,0.55);
 }
 
 header {
@@ -49,7 +46,6 @@ header {
   flex-direction: column;
   align-items: center;
   width: 500px;
-  /* padding-top: 8px; */
 }
 
 .bar {
