--- a/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
+++ b/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
@@ -13,11 +13,9 @@ form {
   flex-direction: column;
   justify-content: center;
   padding: 25px;
-  background: rgba(102, 102, 102, 0.4);
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
+  background-color: #1A1C1D;
+  box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   color: white;
 }
 
@@ -60,7 +58,7 @@ form {
 
 input {
   color: white;
-  background: #444444;
+  background-color: #313131;
   border-radius: 10px;
   text-align: center;
   border: none;
@@ -81,7 +79,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
   -webkit-text-fill-color: white;
-  -webkit-box-shadow: 0 0 0px 40rem #545454 inset;
+  -webkit-box-shadow: 0 0 0px 40rem #313131 inset;
 }
 
 .menu-content {
@@ -105,7 +103,7 @@ input:-webkit-autofill:focus {
 
 .menu-content button {
   display: block;
-  background: rgb(102, 102, 102);
+  background: #313131;
   color: #ffffff;
   padding: 5px;
   text-decoration: none;
@@ -114,8 +112,8 @@ input:-webkit-autofill:focus {
 
 .menu-content button:hover {
   color: #FFFFFF;
-  background-color: #00DBDE;
-  background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+  background: rgb(238, 174, 202);
+  background-color: crimson;
 }
 
 .button-container {
@@ -125,8 +123,8 @@ input:-webkit-autofill:focus {
 .button {
   width: 100px;
   height: 35px;
-  background-color: #00DBDE;
-  background-image: linear-gradient(90deg, #00DBDE 30%, #FC00FF 80%);
+  background: rgb(238, 174, 202);
+  background: linear-gradient(180deg, #450B25 0%, #0E2C53 100%);
   border: none;
   border-radius: 10px;
   color: white;
@@ -135,7 +133,7 @@ input:-webkit-autofill:focus {
 
 .button:disabled {
   background-color: #00DBDE;
-  background-image: linear-gradient(90deg, #000000 30%, #5a5a5a 80%);
+  background-image: linear-gradient(180deg, #000000 0%, #1a1a1a 100%);
   cursor: not-allowed;
 }
 
