--- a/client/src/app/portfolio-view/edit-coin-modal/edit-coin-modal.component.css
+++ b/client/src/app/portfolio-view/edit-coin-modal/edit-coin-modal.component.css
@@ -1,10 +1,8 @@
 .modal {
   color: white;
-  background: rgba(102, 102, 102, 0.4);
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
+  background-color: #1A1C1D;
+  box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   width: 500px;
 }
 
@@ -43,7 +41,7 @@ label {
 
 .input {
   color: white;
-  background: rgba(102, 102, 102, 0.4);
+  background-color: #313131;
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
   border-radius: 10px;
@@ -65,7 +63,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px #3F4249 inset !important;
+  -webkit-box-shadow: 0 0 0 30px #313131 inset !important;
   -webkit-text-fill-color: rgb(255, 255, 255);
 }
 
@@ -82,8 +80,8 @@ input::-webkit-inner-spin-button {
 }
 
 .button {
-  background-color: #00DBDE;
-  background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+  background: rgb(238, 174, 202);
+  background: linear-gradient(180deg, #450B25 0%, #0E2C53 100%);
   border: none;
   border-radius: 10px;
   padding: 10px 30px;
@@ -93,7 +91,7 @@ input::-webkit-inner-spin-button {
 }
 
 .button-cancel {
-  background: grey;
+  background-color: #525252;
   border: none;
   border-radius: 10px;
   padding: 10px 30px;
@@ -128,7 +126,7 @@ input::-webkit-inner-spin-button {
 
 .menu-content button {
   display: block;
-  background: rgb(102, 102, 102);
+  background-color: #313131;
   color: #ffffff;
   padding: 5px;
   text-decoration: none;
@@ -137,8 +135,7 @@ input::-webkit-inner-spin-button {
 
 .menu-content button:hover {
   color: #FFFFFF;
-  background-color: #00DBDE;
-  background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+  background-color: crimson;
 }
 
 .error {
@@ -151,6 +148,8 @@ input::-webkit-inner-spin-button {
 }
 
 button:disabled {
+  background-color: #00DBDE;
+  background-image: linear-gradient(180deg, #000000 0%, #1a1a1a 100%);
   cursor: not-allowed
 }
 
