--- a/client/src/app/portfolio-view/portfolio/portfolio.component.css
+++ b/client/src/app/portfolio-view/portfolio/portfolio.component.css
@@ -5,11 +5,9 @@
 .card {
   width: 1000px;
   color: white;
-  background: rgba(102, 102, 102, 0.4);
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
+  background-color: #1A1C1D;
+  box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   padding: 25px;
   margin: 0 auto;
 }
@@ -49,7 +47,7 @@ tr {
 }
 
 .transaction:hover {
-  background-color: #757575;
+  background-color: #2f2f30;
   transition: background-color, ease, 600ms;
 }
 
@@ -96,8 +94,7 @@ tr {
 }
 
 .button {
-  background-color: #00DBDE;
-  background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+  background-color: crimson;
   border: none;
   border-radius: 10px;
   font-size: large;
@@ -124,6 +121,5 @@ tr {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.6);
 }
