--- a/client/src/app/shared/error-banner/error-banner.component.css
+++ b/client/src/app/shared/error-banner/error-banner.component.css
@@ -1,32 +1,50 @@
 .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   color: white;
   background: rgba(220, 20, 60, 0.4);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
   text-align: center;
   padding: 15px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  position: fixed;
+  top: 80px;
+  right: 0;
+  z-index: 1;
+  width: 400px;
+  animation-duration: 600ms;
+  animation-name: slideIn;
 }
 
 .error-message {
-  padding-top: 4px;
   font-size: 18px;
 }
 
 .icon {
-  font-size: 18px;
-  padding: 3px;
-}
-
-.cross {
+  min-width: 25px;
+  max-width: 25px;
+  min-height: 25px;
+  max-height: 25px;
   cursor: pointer;
+  padding: 3px;
 }
 
-.cross:hover {
-  background-color: #444444;
-  border-radius: 6px;
+.icon:hover {
+  background-color: #2f2f30;
+  border-radius: 100%;
   padding: 3px;
+  transition: background-color ease 600ms;
+}
+
+@keyframes slideIn {
+  from {
+    color: rgba(255, 255, 255, 0);
+    right: -500px
+  }
+
+  to {
+    color: white;
+    right: 0;
+  }
 }
