--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,35 +1,32 @@
 *,
 html {
-    font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto', sans-serif;
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 * {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 input,
 button,
 textarea,
 select {
-    font: inherit;
+	font: inherit;
 }
 
 img,
 picture {
-  max-width: 100%;
-  display: block;
+	max-width: 100%;
+	display: block;
 }
 
 body {
-    background-image: url("./assets/black-bg.webp") !important;
-    background-size: cover;
-    background: no-repeat;
-    background-attachment: fixed;
+	background-color: #101111;
 }
