--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,6 +8,4 @@
 
 <router-outlet></router-outlet>
 
-<div class="spinner-container" *ngIf="(isLoading$ | async)">
-  <app-loading-spinner class="spinner"></app-loading-spinner>
-</div>
+<app-loading-spinner *ngIf="(isLoading$ | async)"></app-loading-spinner>
