--- a/client/src/app/auth/login/login.component.css
+++ b/client/src/app/auth/login/login.component.css
@@ -99,8 +99,7 @@ input:-webkit-autofill:focus {
 }
 
 button {
-  background: rgb(238,174,202);
-  background: linear-gradient(180deg, #450B25 0%, #0E2C53 100%);
+  background-color: crimson;
   border: none;
   border-radius: 10px;
   padding: 10px 30%;
@@ -110,8 +109,7 @@ button {
 }
 
 button:disabled {
-  background-color: #00DBDE;
-  background-image: linear-gradient(180deg, #000000 0%, #1a1a1a 100%);
+  background-color: #050505;
   cursor: not-allowed;
 }
 
