--- a/client/src/app/auth/profile/delete-user-modal/delete-user-modal.component.css
+++ b/client/src/app/auth/profile/delete-user-modal/delete-user-modal.component.css
@@ -88,8 +88,7 @@ input:-webkit-autofill:focus {
 }
 
 .button {
-  background: rgb(238, 174, 202);
-  background: linear-gradient(180deg, #450B25 0%, #0E2C53 100%);
+  background-color: crimson;
   border: none;
   border-radius: 10px;
   padding: 10px 30px;
@@ -110,7 +109,6 @@ input:-webkit-autofill:focus {
 }
 
 button:disabled {
-  background-color: #00DBDE;
-  background-image: linear-gradient(180deg, #000000 0%, #1a1a1a 100%);
+  background-color: #050505;
   cursor: not-allowed;
 }
