--- a/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
+++ b/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
@@ -48,6 +48,7 @@ form {
   display: flex;
   justify-content: space-evenly;
   height: 30px;
+  position: relative;
 }
 
 .input-icon {
@@ -86,14 +87,14 @@ input:-webkit-autofill:focus {
   display: none;
   position: absolute;
   width: 300px;
-  height: fit-content;
   max-height: 300px;
   overflow: auto;
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.712);
-  background-color: white;
-  border-radius: 6px;
+  background-color: #313131;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
   z-index: 1;
-  margin-top: 30px;
+  top: 30px;
 }
 
 .on {
@@ -123,8 +124,7 @@ input:-webkit-autofill:focus {
 .button {
   width: 100px;
   height: 35px;
-  background: rgb(238, 174, 202);
-  background: linear-gradient(180deg, #450B25 0%, #0E2C53 100%);
+  background-color: crimson;
   border: none;
   border-radius: 10px;
   color: white;
@@ -132,8 +132,7 @@ input:-webkit-autofill:focus {
 }
 
 .button:disabled {
-  background-color: #00DBDE;
-  background-image: linear-gradient(180deg, #000000 0%, #1a1a1a 100%);
+  background-color: #050505;
   cursor: not-allowed;
 }
 
