--- a/client/src/app/coins-view/coin-details/coin-details.component.css
+++ b/client/src/app/coins-view/coin-details/coin-details.component.css
@@ -49,6 +49,7 @@ header {
 }
 
 .bar {
+  position: relative;
   width: 300px;
   height: 8px;
   background-color: #6e6e6e;
@@ -63,6 +64,7 @@ header {
   border-bottom-right-radius: 0;
   text-align: right;
   padding-right: 5px;
+  margin-left: -3px;
 }
 
 .arrow {
