Rewrote the entire portfolio section of the app, fixed a bug that prevented users to register, and also rewrote the back end that is part of the portfolio feature.

--- a/client/src/app/coins-view/coin-data-table/coin-data-table.component.css
+++ b/client/src/app/coins-view/coin-data-table/coin-data-table.component.css
@@ -55,7 +55,7 @@ td {
 
 .second-col {
   width: 38px;
-  min-width: 38;
+  min-width: 38px;
   max-width: 38px;
   left: 32px;
   padding-top: 6px;
