--- a/client/src/app/coins-view/coin-data-table/coin-data-table.component.html
+++ b/client/src/app/coins-view/coin-data-table/coin-data-table.component.html
@@ -1,5 +1,5 @@
 <div class="table-container">
-  <table class="table">
+  <table>
     <thead>
       <tr>
         <th class="sticky-col first-col">#</th>
