--- a/client/src/app/portfolio-view/portfolio/portfolio.component.css
+++ b/client/src/app/portfolio-view/portfolio/portfolio.component.css
@@ -1,15 +1,16 @@
-.container {
-  margin: 180px auto;
+.portfolio-container {
+  color: white;
+  overflow-x: auto;
 }
 
-.card {
-  width: 1000px;
-  color: white;
-  background-color: #1A1C1D;
-  box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
-  border-radius: 10px;
+.portfolio {
   padding: 25px;
-  margin: 0 auto;
+  margin: 180px auto;
+  width: 80%;
+  min-width: 400px;
+  background-color: #1A1C1D;
+  box-shadow: 6px 4px 31px 19px rgba(0,0,0,0.55);
+  border-radius: 10px;
 }
 
 .title {
@@ -20,71 +21,6 @@
 
 .title h1 {
   font-weight: 300;
-}
-
-thead {
-  border-bottom: 1px solid #797979;
-  display: flex;
-  flex-direction: column;
-  padding: 0 15px;
-}
-
-tbody {
-  display: flex;
-  flex-direction: column;
-}
-
-tr {
-  display: flex;
-  justify-content: space-around;
-  gap: 10px;
-  text-align: center;
-  height: 40px;
-}
-
-.transaction {
-  border-bottom: 1px #797979 solid;
-}
-
-.transaction:hover {
-  background-color: #2f2f30;
-  transition: background-color, ease, 600ms;
-}
-
-.first-header {
-  width: 140px;
-  text-align: left;
-  padding-top: 10px;
-}
-
-.second-header {
-  width: 200px;
-  text-align: left;
-  padding-top: 10px;
-}
-
-.third-header {
-  width: 150px;
-  display: inline;
-  text-align: left;
-  padding-top: 10px;
-}
-
-.fourth-header {
-  width: 120px;
-  text-align: left;
-  padding-top: 10px;
-}
-
-.fifth-header {
-  width: 120px;
-  text-align: left;
-  padding-top: 10px;
-}
-
-.sixth-header {
-  width: 28px;
-  text-align: left;
 }
 
 .right-title {
